--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
     </style>
     <title>React App</title>
   </head>
